name:                taffybar-configured
version:             0.0.0.0
author:              Jenna Fligor
maintainer:          jenna@fligor.net
build-type:          Simple
cabal-version:       >=1.10

executable taffybar
  hs-source-dirs:      .
  main-is:             taffybar.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , data-default
                     , directory
                     , filepath
                     , gtk3
                     , taffybar
                     , text
                     , X11>=1.8
  default-language:    GHC2021
